@@ -1,5 +1,10 @@
 2011-09-02	Sebastian Huber <sebastian.huber@embedded-brains.de>
 
+	* rtems/score/nios2-utility.h, nios2-isr-set-level.c,
+	nios2-isr-get-level.c: Renamed functions.
+
+2011-09-02	Sebastian Huber <sebastian.huber@embedded-brains.de>
+
 	* rtems/score/nios2-utility.h: Use the same values for defines used by
 	Altera HAL.
 
